# BDX-R-MjLab

./: .gitignore  README.md  pyproject.toml
data/: fake-head.npz  fake-walk.npz  fake_head_motion.csv  fake_walk.csv
scripts/: list_envs.py  play.py  train.py
src/bdx_r_mjlab/: __init__.py
src/bdx_r_mjlab/robots/: __init__.py
src/bdx_r_mjlab/robots/bdx_r/: bdx_r_constants.py
src/bdx_r_mjlab/robots/bdxr/: __init__.py  bdxr_constants.py  bdxr_constants_legs.py
src/bdx_r_mjlab/robots/bdxr/xmls/: bdxr.xml  bdxr_legs.xml  t1.xml
src/bdx_r_mjlab/scripts/: bdxr_csv_to_npz.py  bdxr_full_csv_to_npz.py  list_envs.py  play.py  train.py
src/bdx_r_mjlab/tasks/: __init__.py
src/bdx_r_mjlab/tasks/bdx_r_locomotion/: __init__.py  flat_env_cfg.py  rl_cfg.py  rough_env_cfg.py
src/bdx_r_mjlab/tasks/bdx_r_locomotion/mdp/: __init__.py
src/bdx_r_mjlab/tasks/tracking/: __init__.py  env_cfg.py  full_env_cfg.py  rl_cfg.py
src/bdx_r_mjlab/tasks/velocity/: __init__.py  flat_env_cfg.py  rl_cfg.py  rough_env_cfg.py  velocity_env_cfg.py
src/bdx_r_mjlab/tasks/velocity/config/: __init__.py
src/bdx_r_mjlab/tasks/velocity/config/bdxr/: __init__.py  env_cfgs.py  legs_env_cfgs.py  rl_cfg.py
src/bdx_r_mjlab/tasks/velocity/mdp/: __init__.py
