[project]
name = "bdx-r-mjlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis Le Lay", email = "louislelay@pal-robotics.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab",
    "ruff>=0.14.0",
]

[project.scripts]
bdx-r-mjlab = "bdx_r_mjlab:main"
bdx_r_train = "bdx_r_mjlab.scripts.train:main"
bdx_r_play = "bdx_r_mjlab.scripts.play:main"
bdx_r_list_envs = "bdx_r_mjlab.scripts.list_envs:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab" }
